--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,72 +1,448 @@
-<!-- <div class="container">
-    <form class="form-signin" (ngSubmit)="signup()" #signupForm="ngForm">
-      <div class="alert alert-warning alert-dismissible" role="alert" *ngIf="message !== ''">
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        {{message}}
-      </div>
-      <h2 class="form-signin-heading">Sign Up Now</h2>
-      <label for="inputEmail" class="sr-only">Email address</label>
-      <input type="email" class="form-control" placeholder="Email address" [(ngModel)]="signupData.username" name="username" required/>
-      <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" class="form-control" placeholder="Password" [(ngModel)]="signupData.password" name="password" required/>
-      <button class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!signupForm.form.valid">Sign Up</button>
-    </form>
-  </div> -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,300i,400" rel="stylesheet"> <!--including Google fonts Lato for our website-->
+   
+    <style>
+        .nav-link {
+    font-size: 1.1em;
+    font-family: 'Lato', 'sans-serif';
+    cursor: pointer;
+    margin-left: 20px;
+    color: #fff;
+}
+
+nav .navbar-nav li a{
+  color: #fff !important;
+  }
+
+.navbar .navbar-text {
+    color: white!important;
+    font-weight: bold;
+    font-size: 1em;
+}
+
+.sheero { 
+    height: 60px;
+    width: auto;
+}
+
+/************ Basic Setup *******/
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    
+    background-image: url("webform_wallpaper.png");
+    background-size: cover;
+    background-position: center;
+    height: 100vh; 
+    background-color: #fff;
+    color: #555454;
+    font-family: 'Lato', 'Arial', sans-serif;
+    font-weight: 300;
+    font-size: 20px;                        /******** Base Line font-size **********/           
+    text-rendering: optimizeLegibility;
+    overflow-x: hidden;
+      
+}
+
+.clearfix {zoom: 1} /*using to clear float anomalies */
+.clearfix:after {
+    content: '.';
+    clear: both;
+    display: block;
+    height: 0;
+    visibility: hidden;
+}
 
 
-  <!DOCTYPE html>
-<html>
-<head>
-  <title>Login Page</title>
+/******** Reusable - Base components ***********/
 
-  <!--Bootsrap 4 CDN-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+.row {
+    max-height: 1140px;                     /******** Base Line Height **********/
+    margin: 0 auto 0 auto;
+}
 
-    <!--Fontawesome -- Fa icons -- CDN-->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+section {
+    padding: 90px 0;                        /********* Base line padding  ********/ 
+}
 
-  <!--Login Custom styles-->
+/********** Heading ***********/
 
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</head>
-<body>
-<div class="container">
-  <div class="d-flex justify-content-center h-100">
-    <div class="card">
-      <div class="card-header">
-        <h3>Get Started<span style="float:right;"><button class="btn btn-success" (click)="logout()">Home</button></span></h3>
-      </div>
-      <div class="card-body">
-        <form (submit)="signup()">
-          <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-envelope"></i></span>
-            </div>
-            <input type="email" class="form-control" placeholder="Email address" [(ngModel)]="signupData.username" name="username" required/>
-          </div>
-          <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-user"></i></span>
-            </div>
-            <input type="text" class="form-control" placeholder="Username">
-          </div>
-          <div class="input-group form-group">
-            <div class="input-group-prepend">
-              <span class="input-group-text"><i class="fas fa-key"></i></span>
-            </div>
-            <input type="password" class="form-control" placeholder="Password" [(ngModel)]="signupData.password" name="password" required/>
-          </div>
+h2 {
+    font-weight: 300;
+    font-size: 180%;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
+    word-spacing: 2%;
+    margin-bottom: 35%;
+    margin-left: 19.8958333333%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
+    padding-top: 2%;
+    letter-spacing: 1%;
+}
 
-          <div class="form-group form-button">
-                        <button type="submit" value="Login" class="btn login_btn">Sign Up</button>
-          </div>
-        </form>
-      </div>
 
-    </div>
-  </div>
-</div>
-</body>
+/************* Add events Form ********************/
+.add-form-container {
+    width: 50%;                             /* Here context is section of width 90px, so target/context = 63px/90px = 70% */
+    height: 100%;                          /****** 100% of viewport height ********/
+    margin: 0 auto;
+    background-color: #fff;
+    /*border-radius: 25%; */
+}
+
+label {
+        display: block;
+        color: #555454;
+        font-weight: 400;
+    }
+
+.add-form {
+    padding-top: 3%;
+    width: 60%;                            /* context is row of width 960px, target/context = 576px/960px = 60% */
+    margin: 0 auto; 
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding: 2%;
+    margin-bottom: 8%;
+    border-radius: 3%;
+    border: 1px solid #ccc;
+}
+
+textarea {
+    height: 100%;
+}
+
+
+
+/************ Submit button *********************/
+.btn:link, 
+.btn:visited,
+input[type=submit] {
+    display: inline-block;
+    margin-top: 2.5%;
+    padding: 2% 8%;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 25%;
+}
+
+
+.btn-full:link, 
+.btn-full:visited,
+input[type=submit] {
+    background-color: #d35400;
+    border: 1px solid #d35400;
+    color: #fff;
+    margin-right: 15%;
+}
+
+input[type=date],
+input[type=file]{
+    width: 100%;
+    padding: 2%;
+    margin-bottom: 8%;
+    border-radius: 3%;
+    border: 1px solid #ccc;
+}
+    
+    
+textarea {
+    height: 20%;
+}
+    
+
+
+    .submit-button {
+        text-align: center;
+        padding-bottom: 20%;
+    }
+
+
+.add-form-container-mobile {
+    display: none;
+}
+
+
+/***************************************************************/
+/****************** Media Queries ******************************/
+/***************************************************************/
+
+@media only screen and (max-width: 768px) {
+    
+    body { font-size: 15%; }
+    section { padding: 10% 0;}
+    
+    .add-form-container { display: none;}
+    
+    .add-form-container-mobile {
+        padding-top: 10%;
+        display: block;
+        width: 70%;
+        margin: 0 auto;
+    }
+    
+    h2 {
+    font-weight: 300;
+    font-size: 180%;
+    word-spacing: 2%;
+    padding-bottom: 12%;
+    margin-left: 19.99999%;
+    padding-top: 2%;
+    letter-spacing: 1%;
+    }
+    
+    label {
+        display: block;
+        color: #fff;
+        font-weight: 400;
+    }
+    
+    input[type=text],
+    input[type=email],
+    select,
+    textarea {
+    width: 100%;
+    padding: 2%;
+    margin-bottom: 10%;
+    border-radius: 3%;
+    border: 1px solid #ccc;
+}
+
+    
+input[type=date],
+input[type=file] {
+    width: 100%;
+    padding: 2%;
+    margin-bottom: 10%;
+    border-radius: 3%;
+    border: 1px solid #ccc;
+}
+    
+    
+textarea {
+    height: 20%;
+}
+
+
+    .submit-button {
+        text-align: center;
+        padding-bottom: 20%;
+    }
+    
+}
+  
+      
+    </style>
+  <!-- Bootstrap Files for Header section alone -->
+   
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    
+      
+  </head>
+  <body>
+    
+    <nav class="navbar navbar-expand-md">
+        <a class="navbar-brand"><img src="sheero_face.PNG" alt="sheero_logo" class="sheero"/></a>
+        <span class="navbar-text mx-auto">TripWithUs!</span>
+        
+        <button class="navbar-toggler ml-auto navbar-light bg-light" data-toggle="collapse" data-target="#collapse_target">
+        
+            <span class="navbar-toggler-icon"></span>
+            
+        </button>
+        
+        <div class="collapse navbar-collapse" id="collapse_target">
+        <ul class="navbar-nav ml-auto">
+            
+            <li class="nav-item">
+                <a class="nav-link" routerLink="">Home</a>
+            </li>
+        
+            <li class="nav-item">
+                <a class="nav-link" routerLink="aboutus">About Us</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="signup">Sign Up</a>
+            </li>
+
+            <li class="nav-item">
+                <a class="nav-link" routerLink="login">Login</a>
+            </li>
+
+        </ul>
+        </div>
+    </nav> 
+    
+      
+      
+    <section class="add-events">
+                <div class="add-form-container">
+                <div class="row">
+                    <h2 style="color:#555454;">Add Events</h2>
+                </div>
+                
+                
+                    <form method="post" action="#" class="add-form">
+                        <!---- Event_ID row ----------->
+                        
+                            
+                                <label for="event-id">Event ID</label>
+                            
+                            
+                                <input type="text" name="event-id" id="event-id" placeholder="enter event ID" required>
+                        
+                        <!------- Event Name row --------->
+                       
+                        
+                        <label for="event-name">Event Name</label>
+                        
+                        <input type="text" name="event-name" id="event-name" placeholder="enter event name" required>
+                        
+                       
+                        <!------- Event location row --------->
+                       
+                        
+                        <label for="event-location">Event Location</label>
+                        
+                        
+                        <input type="text" name="event-location" id="event-location" placeholder="enter location" required>
+                        
+                        <!------- Event Zip code row --------->
+                       
+                        
+                        <label for="event-zipcode">Zipcode</label>
+                        
+                        
+                        <input type="text" name="event-zipcode" id="event-zipcode" placeholder="enter zipcode" required>
+                        
+                       
+                        <!------- Event Date row --------->
+                        
+                                <label for="event-date">Event Date</label>
+                            
+                                <input type="date" name="event-date" id="event-date" required>
+                        
+                        <!------- Event attachment row --------->
+                       
+                        
+                        <label for="event-file">Event File</label>
+                        
+                        <input type="file" name="event-file" id="event-file" placeholder="attach event file" required>
+                       
+                       
+                           
+                        <!----------- Event Description row ------------->
+                       
+                                <label>Event Description</label>
+                          
+                                <textarea name="message" rows="5" cols="30"></textarea>  
+                          
+                        <!----------- Submit button row ------------->
+                       
+                                <label>&nbsp;</label>
+                           
+                                
+                                <div class="submit-button">
+                                    <input type="submit" value="Submit">
+                                </div>
+                         
+                    </form>
+                
+                
+                    </div>
+        
+        
+        <!----------------------------------  Mobile Form ------------------------------------------- -->
+            <div class="add-form-container-mobile">
+                <div class="row">
+                    <h2 style="color:#fff;">Add Events</h2>
+                </div>
+                <!------- Customer name row --------->
+                <div class="row">
+                    <form method="post" action="#" class="add-form-mobile">
+                       <!---- Event_ID row ----------->
+                        
+                            
+                                <label for="event-id">Event ID</label>
+                            
+                            
+                                <input type="text" name="event-id" id="event-id" placeholder="enter event ID" required>
+                            
+                         <!------- Event Name row --------->
+                       
+                        
+                        <label for="event-name">Event Name</label>
+                        
+                        <input type="text" name="event-name" id="event-name" placeholder="enter event name" required>
+
+                       <!------- Event location row --------->
+                       
+                        
+                        <label for="event-location">Event Location</label>
+                        
+                        
+                        <input type="text" name="event-location" id="event-location" placeholder="enter location" required>
+
+                       <!------- Event Zip code row --------->
+                       
+                        
+                        <label for="event-zipcode">Zipcode</label>
+                        
+                        
+                        <input type="text" name="event-zipcode" id="event-zipcode" placeholder="enter zipcode" required>
+                        
+                       
+                        <!------- Event Date row --------->
+                        
+                                <label for="event-date">Event Date</label>
+                            
+                                <input type="date" name="event-date" id="event-date" required>
+                         <!------- Event attachment row --------->
+                       
+                        
+                        <label for="event-file">Event File</label>
+                        
+                        <input type="file" name="event-file" id="event-file" placeholder="attach event file" required>
+                       
+                        
+                        <!----------- Event Description row ------------->
+                       
+                                <label>Event Description</label>
+                          
+                                <textarea name="message" rows="5" cols="30"></textarea>
+                            
+                        <!----------- Submit button row ------------->
+                        
+                                
+                                    <label>&nbsp;</label>
+                                
+                                <div class="submit-button">
+                                    <input type="submit" value="Submit">
+                                </div>
+                    </form>
+                
+                </div> 
+                    </div>
+    
+            </section>
+      
+      <!------------------------------------------------------------------------------------------------------------------------->
+      <!--Bootstrap4 JS files -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+            
+  </body>
 </html>
