--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -73,7 +73,7 @@ h2 {
   font-weight: 300;
   font-size: 180%;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
   word-spacing: 2%;
-  margin-bottom: 35%;
+  margin-bottom: 20%;
   margin-left: 19.8958333333%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
   padding-top: 2%;
   letter-spacing: 1%;
@@ -189,7 +189,7 @@ textarea {
   font-weight: 300;
   font-size: 180%;
   word-spacing: 2%;
-  padding-bottom: 12%;
+  /*padding-bottom: 12%;*/
   margin-left: 19.99999%;
   padding-top: 2%;
   letter-spacing: 1%;
