--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -2,7 +2,7 @@
   font-size: 1.1em;
   font-family: 'Lato', 'sans-serif';
   cursor: pointer;
-  margin-left: 20px;
+  margin-left: 25px;
   color: #fff;
 }
 
@@ -73,9 +73,10 @@ h2 {
   font-weight: 300;
   font-size: 180%;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
   word-spacing: 2%;
-  margin-bottom: 20%;
+  /* margin-bottom: 20%;*/
   margin-left: 19.8958333333%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
   padding-top: 2%;
+  text-align: center;
   letter-spacing: 1%;
 }
 
