--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -73,7 +73,7 @@ h2 {
   font-weight: 300;
   font-size: 180%;            /* expressed in %age of body font size: target/context = 36px/20px = 180% */
   word-spacing: 2%;
-  /* margin-bottom: 20%;*/
+  margin-bottom: 15%;
   margin-left: 19.8958333333%;     /* 960px is row width (context) ,so Target/Context = 191px/960px = 19.8958333333% */
   padding-top: 2%;
   text-align: center;
