--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -236,5 +236,9 @@ textarea {
       text-align: center;
       padding-bottom: 20%;
   }
+
+  nav .navbar-nav li {
+    margin-left: 25px;
+    }
   
 }
