--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -13,7 +13,7 @@
   <body>
     
     <nav class="navbar navbar-expand-md">
-        <a class="navbar-brand"><img src="sheero.png" alt="sheero_logo" class="sheero"/></a>
+        <a class="navbar-brand"><img src="/src/assets/images/sheero.png" alt="sheero_logo" class="sheero"/></a>
         <span class="navbar-text mx-auto">TripWithUs!</span>
         
         <button class="navbar-toggler ml-auto navbar-light bg-light" data-toggle="collapse" data-target="#collapse_target">
