--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -184,7 +184,7 @@
 
 <div class="pimg2">
 	<div class="ptext">
-	<span class="border trans">
+  <span class="border ">
       <h2> Life's an adventure &mdash; Paddle hard !</h2>
 	</span>
 	</div>
