--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -190,6 +190,13 @@
 	</div>
 </div>
 
+<div class="pimg3">
+    <div class="ptext">
+    <span class="border ">
+      Want to check out happening Events ?
+    </span>
+    </div>
+  </div>
 
 <section class="section section-dark">
     <h2> Interesting Destinations </h2>
