Life's an adventure modification

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -185,18 +185,12 @@
 <div class="pimg2">
 	<div class="ptext">
   <span class="border ">
-      <h2> Life's an adventure &mdash; Paddle hard !</h2>
+      <h2> Life's an adventure - Paddle hard !</h2>
 	</span>
 	</div>
 </div>
 
-<div class="pimg3">
-    <div class="ptext">
-    <span class="border ">
-      Want to check out happening Events ?
-    </span>
-    </div>
-  </div>
+
 
 <section class="section section-dark">
     <h2> Interesting Destinations </h2>
