modifying title in mobile in nav and modifying Life's an adventure

--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -683,6 +683,11 @@ padding: 40px;
 
 		nav .navbar-nav li {
 			padding-top: 2%;
-			}  
+			}
+			
+		.sheero { 
+				height: 45px;
+				width: auto;
+			}
 
 }
