--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -184,9 +184,11 @@
 
 <div class="pimg2">
 	<div class="ptext">
-  <span class="border ">
-      <h2> Life's an adventure - Paddle hard !</h2>
-	</span>
+  <!--<span class="border trans"> -->
+    <span>
+      <h2> Life's an adventure &mdash; Paddle hard !</h2>
+    </span>
+	<!--</span>-->
 	</div>
 </div>
 
