Life is an adventure

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -186,7 +186,7 @@
 	<div class="ptext">
   
     <span>
-      <h2> Life's an adventure &mdash; Paddle hard !</h2>
+      <h2 class="adventure"> Life's an adventure &mdash; Paddle hard !</h2>
     </span>
 	
 	</div>
