--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -126,6 +126,18 @@ color: #fff !important;
 	letter-spacing: 8px;
 	text-transform: uppercase;
 }
+.adventure h2 {
+color: #fff;
+font-weight: bold;
+position: absolute;
+	top: 50%;
+	width: 100%;
+	text-align: center;
+	color: #000;
+	font-size: 27px;
+	letter-spacing: 8px;
+	text-transform: uppercase;
+}
 
 .ptext .border{
 	background : #111;
