--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -365,7 +365,7 @@
 <a href="https://www.facebook.com/groups/265746840999847/" target="_blank"><i class="fa fa-facebook" style="font-size:40px;color:white"></i></a>
 
 <div class="row">
-    <p style="text-align: center;">
+    <p class="footer-part">
         Copyright &copy; 2019 by TripWithUs! Developed by Team# 05. <br /> All rights reserved.
     </p>
 </div>
