--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -205,20 +205,8 @@
                 Austin, Texas.  For each of these locations we provide you with the information you care about.
                 Also, we are not limited to kayaking alone!
                 </p>
-          <div class="categories">
-            <ul class="cat">
-              <!-- <li>
-                <ol class="type">
-                  <li><a href="#" data-filter="*" class="active">All</a></li>
-                  <li><a href="#" data-filter=".web">Web Design</a></li>
-                  <li><a href="#" data-filter=".photography">Photography</a></li>
-                  <li><a href="#" data-filter=".product">Product Design</a></li>
-                </ol>
-              </li> -->
-            </ul>
-            <div class="clearfix"></div>
-          </div>
-          <div class="row">
+        
+          <!--<div class="row">
             <div class="portfolio-items">
               <div class="col-sm-6 col-md-3 col-lg-3 web">
                 <div class="portfolio-item">
@@ -264,6 +252,46 @@
 
 
             </div>
+          </div>-->
+          <div id="demo" class="carousel slide" data-ride="carousel">
+            <!-- slideshow -->
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="/assets/images/disneyland.png" alt="Disney Land">
+                  <div class="carousel-caption">
+                      <h3>Disney Land</h3>
+                      <p>Have a blast at Disney Land</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/assets/images/grandcanyon.png" alt="Grand Canyon">
+                  <div class="carousel-caption">
+                      <h3>Grand Canyon</h3>
+                      <p>Enjoy the grandeur</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/assets/images/statecapitol.png" alt="State Capitol">
+                  <div class="carousel-caption">
+                      <h3>Texas State Capitol</h3>
+                      <p>Explore Texas's history</p>
+                  </div>
+              </div>
+              <div class="carousel-item">
+                <img src="/assets/images/spaceneedle.png" alt="space needle">
+                  <div class="carousel-caption">
+                      <h3>Space Needle Seattle</h3>
+                      <p>Enjoy the scenic beauty</p>
+                  </div>
+              </div>
+            </div>
+            <!-- Left and right controls -->
+         <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
           </div>
         </div>
       </div>
