--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -206,78 +206,32 @@
                 Also, we are not limited to kayaking alone!
                 </p>
         
-          <!--<div class="row">
-            <div class="portfolio-items">
-              <div class="col-sm-6 col-md-3 col-lg-3 web">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/nyclarge.jpg" title="New York City" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>New York City</h4>
-                    </div>
-                    <img src="/assets/images/nycsmall.jpg" class="img-responsive" alt="Project Title"> </a>
-                    </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-3 col-lg-3 product">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="02/assets/images/washingtonlarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Grand Canyon</h4>
-                    </div>
-                    <img src="/assets/images/washingtonsmall.jpg" class="img-responsive" alt="Project Title"> </a>
-                    </div>
-                </div>
-              </div>
-              <div class="col-sm-6 col-md-3 col-lg-3 web">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/disneylarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Disney World</h4>
-                    </div>
-                    <img src="/assets/images/disneysmall.jpg" class="img-responsive" alt="Project Title"> </a>
-                    </div>
-                </div>
-              </div>
-
-              <div class="col-sm-6 col-md-3 col-lg-3 photography">
-                <div class="portfolio-item">
-                  <div class="hover-bg nohover"> <a href="/assets/images/lasvegaslarge.jpg" title="Project Title" data-lightbox-gallery="gallery1">
-                    <div class="hover-text">
-                      <h4>Las Vegas</h4>
-                    </div>
-                    <img src="/assets/images/lasvegassmall.jpg" class="img-responsive" alt="Project Title"> </a>
-                    </div>
-                </div>
-              </div>
-
-
-            </div>
-          </div>-->
+         
           <div id="demo" class="carousel slide" data-ride="carousel">
             <!-- slideshow -->
             <div class="carousel-inner">
-              <div class="carousel-item active">
+              <div class="item active">
                 <img src="/assets/images/disneyland.png" alt="Disney Land">
                   <div class="carousel-caption">
                       <h3>Disney Land</h3>
                       <p>Have a blast at Disney Land</p>
                   </div>
               </div>
-              <div class="carousel-item">
+              <div class="item">
                 <img src="/assets/images/grandcanyon.png" alt="Grand Canyon">
                   <div class="carousel-caption">
                       <h3>Grand Canyon</h3>
                       <p>Enjoy the grandeur</p>
                   </div>
               </div>
-              <div class="carousel-item">
+              <div class="item">
                 <img src="/assets/images/statecapitol.png" alt="State Capitol">
                   <div class="carousel-caption">
                       <h3>Texas State Capitol</h3>
                       <p>Explore Texas's history</p>
                   </div>
               </div>
-              <div class="carousel-item">
+              <div class="item">
                 <img src="/assets/images/spaceneedle.png" alt="space needle">
                   <div class="carousel-caption">
                       <h3>Space Needle Seattle</h3>
