making the width of container to be contained within portfolio in mobile

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -140,12 +140,11 @@
     <h2> Interesting Destinations </h2>
 
     <div id="portfolio">
-        <div class="container content">
+        <div class="container">
             <p class="content-para">
-                Explore best places to go Kayaking around the U.S. with us! Ranging from Prince William Sound
+                Explore best places around the U.S. with us! Ranging from Prince William Sound
                 located in the heart of Chugach National forest in Alaska to Congress Avenue in the downtown
-                Austin, Texas.  For each of these locations we provide you with the information you care about.
-                Also, we are not limited to kayaking alone!
+                Austin, Texas.  For each of these locations we provide you with the information you care about!
                 </p>
         
          
