changing container width

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -206,7 +206,7 @@
     <h2>It's more than just music !</h2>
 
     <div id="portfolio">
-        <div class="container content">
+        <div class="container">
             <p class="content-para">
                 Explore our expert recommendations on nearby live events, festivals, tours, and music concerts around the U.S. with us! Get promo codes, best deals and discounts! After all, what completes your trip but a gala time at a fun event with family and friends!
                 </p>
