--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -612,6 +612,9 @@ padding: 40px;
 .carousel-inner img {
   margin: auto;
 }
+.carousel-inner {
+	padding-top: 5%;
+}
 
 /***************************** Media Queries ***********************************************/
 
@@ -656,8 +659,6 @@ padding: 40px;
 
 }
 
-
-
 .section-dark h2 {
 	line-height: 160%;
     padding-bottom: 5px;
@@ -666,7 +667,7 @@ padding: 40px;
 }
 
 .container {
-	max-width: 300px;
+	max-width: 600px;
 }
 
 #portfolio {
@@ -681,9 +682,7 @@ padding: 40px;
     }
 
 .hover-bg .hover-text {
-
     display: none;
-
 }
 
 .btn {
@@ -708,7 +707,7 @@ padding: 40px;
 }
 
 .carousel-inner {
-	padding-top: 2%;
+	padding-top: 3%;
 }
 
 }
