--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -54,7 +54,7 @@ color: #fff !important;
 
 
  .content-para {
-        font-size: 1.5em;
+        font-size: 2.5em;
         word-spacing: 3px;
         text-align: left;
     }
@@ -666,12 +666,11 @@ padding: 40px;
 
 }
 
-.container {
-	max-width: 600px;
-}
+
 
 #portfolio {
-        padding: 10px 10px;
+				padding: 10px 10px;
+				max-width: 100%;
     }
    
     .content-para {
