--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -54,7 +54,8 @@ color: #fff !important;
 
 
  .content-para {
-        font-size: 2.5em;
+				font-size: 1.8em;
+				line-height: 1.4em;
         word-spacing: 3px;
         text-align: left;
     }
@@ -621,7 +622,10 @@ padding: 40px;
 
 @media only screen and (max-width: 768px) {
 
-
+	.section{
+		text-align: center;
+		padding: 50px 5px;
+	}
 
 .pimg1 .ptext .border {
     display: block;
@@ -672,15 +676,9 @@ padding: 40px;
 #portfolio {
 				padding: 10px 10px;
     }
- /*  
-    .content-para {
-        font-size: 1.5em;
-        word-spacing: 3px;
-        padding: 10px 0px 0px;
-        text-align: left;
-		}*/
+ 
 		.content-para{
-		font-size: 2em;
+		font-size: 1.8em;
     line-height: 1.4em;
     word-spacing: 3px;
     padding: 10px 0px 0px;
@@ -707,12 +705,6 @@ padding: 40px;
 				width: auto;
 			}
 
-
-/************ adjusting the light grey portfolio container inside dark grey section **********/
-.section{
-	text-align: center;
-	padding: 50px 5px;
-}
 /************* Carousel destinations ***********/
 .carousel-inner img {
   max-width: 100%;
