--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -63,7 +63,7 @@
 
 <section class="section section-dark">
 
-    <h1> You dream it - we make it ! </h1>
+    <h1 style="padding-bottom:2%;"> You dream it - we make it ! </h1>
           <div id="portfolio">
               <div class="container">
 
@@ -137,7 +137,7 @@
 
 
 <section class="section section-dark">
-    <h1> Interesting Destinations </h1>
+    <h1 style="padding-bottom:2%;"> Interesting Destinations </h1>
 
     <div id="portfolio">
         <div class="container">
@@ -206,7 +206,7 @@
 
 
 <section class="section section-dark">
-    <h2>It's more than just music !</h2>
+    <h1 style="padding-bottom:2%;">It's more than just music !</h1>
 
     <div id="portfolio">
         <div class="container">
