--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -63,7 +63,7 @@
 
 <section class="section section-dark">
 
-    <h1 style="padding-bottom:2%;"> You dream it - we make it ! </h1>
+    <h1 style="padding-bottom:5%;"> You dream it - we make it ! </h1>
           <div id="portfolio">
               <div class="container">
 
@@ -137,7 +137,7 @@
 
 
 <section class="section section-dark">
-    <h1 style="padding-bottom:2%;"> Interesting Destinations </h1>
+    <h1 style="padding-bottom:5%;"> Interesting Destinations </h1>
 
     <div id="portfolio">
         <div class="container">
@@ -188,7 +188,7 @@
             <span class="carousel-control-next-icon"></span>
           </a>
           </div>
-          <p class="content-para" style="text-align: center; padding-top: 10%; font-size: 1.4em; font-weight: bold;">
+          <p class="explore-para">
             Explore more places <a href="#"><em>here</em></a>
            </p>
         </div>
@@ -206,7 +206,7 @@
 
 
 <section class="section section-dark">
-    <h1 style="padding-bottom:2%;">It's more than just music !</h1>
+    <h1 style="padding-bottom:5%;">It's more than just music !</h1>
 
     <div id="portfolio">
         <div class="container">
