added cards instead of hover in services

--- a/src/app/tripwithus/tripwithus.component.html
+++ b/src/app/tripwithus/tripwithus.component.html
@@ -72,9 +72,43 @@
                         No time for organizing a trip to your dream city that you always wanted to explore.
                         So let us take care of that, we’re really good at it, we promise!
                       </p>
-
-
                 
+                      <div class="container square-grid">
+                          <div class="card-deck mb-5">
+                              <div class="card" style="color: #555;">
+                                  <div class="card-body">
+                                  <img src="/assets/images/customer_support.png" alt="Customer Support picture" class="img-fluid"/>
+                                  <h4 class="card-title mt-2">Customer Support</h4>
+                                  <h6 class="card-subtitle">For you 24 &times;7</h6>
+                                  </div>
+                              </div>
+                              <div class="card" style="color: #555;">
+                                  <div class="card-body">
+                                  <img src="/assets/images/checkout.png" alt="Easy checkout picture" class="img-fluid"/>
+                                  <h4 class="card-title mt-2">Easy Checkout</h4>
+                                  <h6 class="card-subtitle">Hassle Free, Always</h6>
+                                  </div>
+                              </div>
+                              <div class="card" style="color: #555;">
+                                  <div class="card-body">
+                                  <img src="/assets/images/recommendation.png" alt="expert recommedation picture" class="img-fluid"/>
+                                  <h4 class="card-title mt-2">Expert Recommendation</h4>
+                                  <h6 class="card-subtitle">Anything and Everything</h6>
+                                  </div>
+                              </div>
+                              <div class="card" style="color: #555;">
+                                  <div class="card-body">
+                                  <img src="/assets/images/simple_search.png" alt="simple search picture" class="img-fluid"/>
+                                  <h4 class="card-title mt-2">Simply Search!</h4>
+                                  <h6 class="card-subtitle">Intuitive and Easy</h6>
+                                  </div>
+                              </div>
+                              </div>
+                              
+                      
+                      </div>
+
+                <!--
                 <div class="row">
                   <div class="portfolio-items">
                     <div class="col-sm-6 col-md-3 col-lg-3 web">
@@ -117,7 +151,7 @@
 
 
                   </div>
-                </div>
+                </div>-->
               </div>
             </div>
 
