--- a/src/app/tripwithus/tripwithus.component.css
+++ b/src/app/tripwithus/tripwithus.component.css
@@ -618,6 +618,10 @@ padding: 40px;
 	padding-top: 5%;
 }
 
+.square-grid h4{
+	color: #555;
+}
+
 /***************************** Media Queries ***********************************************/
 
 @media only screen and (max-width: 768px) {
