--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -10,12 +10,16 @@ html, body {
 
 
 .nav-link {
-    font-size: 1.4em;
+    font-size: 2em;
     font-family: 'Lato', 'sans-serif';
     cursor: pointer;
-    margin-left: 35px;
-    /*color: #555454; */
+    margin-left: 25px;
+    
 }
+
+nav .navbar-nav li {
+    margin-left: 25px;
+    }
 
 nav .navbar-nav li a{
   color: #000 !important;
@@ -24,13 +28,14 @@ nav .navbar-nav li a{
 .navbar .navbar-text {
     color: black!important;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 2.4em;
 }
 
 .sheero { 
     height: 60px;
     width: auto;
 }
+
 
 /*******************************************/
 
@@ -73,4 +78,18 @@ h5.card-title {
 p.card-text {
     padding-bottom: 0.8rem;
     line-height: 1.2rem;
+}
+
+/***************************** Media Queries ***********************************************/
+
+@media only screen and (max-width: 768px) {
+    nav .navbar-nav li {
+        padding-top: 2%;
+        }
+        
+    .sheero { 
+            height: 45px;
+            width: auto;
+        }
+
 }
