--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -8,8 +8,10 @@ html, body {
     background-image: url('http://getwallpapers.com/wallpaper/full/3/7/e/1449721-windows-81-lock-screen-wallpaper-1920x1200-4k.jpg');
     font-family: "Lato", sans-serif;
     background-size: cover;
+    background-position: center;
+    min-height: 100%;
         height: 100vh;
-        font-style: 16px;
+        font-style: 20px;
         font-family: 'Lato', 'sans-serif';
         font-weight: 400;
         line-height: 1.8em;
@@ -65,9 +67,9 @@ nav .navbar-nav li a{
     position: absolute;
     z-index: 2;
     display: block;
-    width: 2.375rem;
-    height: 2.375rem;
-    line-height: 2.375rem;
+    width: 2.375em;
+    height: 2.375em;
+    line-height: 2.375em;
     text-align: center;
     pointer-events: none;
     color: #aaa;
@@ -76,20 +78,20 @@ nav .navbar-nav li a{
 /**************************************************/
 
 .card-body {
-    padding: 0.5rem;
+    padding: 0.5em;
 }
 
 h3.card-title {
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }
 
 h5.card-title {
-    font-size: 1.5rem;
+    font-size: 1.5em;
 }   
 
 p.card-text {
-    padding-bottom: 0.8rem;
-    line-height: 1.2rem;
+    padding-bottom: 0.8em;
+    line-height: 1.2em;
 }
 
 /***************************** Media Queries ***********************************************/
