--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -10,7 +10,7 @@ html, body {
     background-size: cover;
     background-position: center;
     min-height: 100%;
-        height: 100vh;
+        
         font-style: 20px;
         font-family: 'Lato', 'sans-serif';
         font-weight: 400;
@@ -75,23 +75,35 @@ nav .navbar-nav li a{
     color: #aaa;
 }
 
+.input-group .form-control {
+    font-size: 2em;
+}
+
+.btn {
+    font-size: 1.5em;
+}
+
+
+
+
 /**************************************************/
 
 .card-body {
     padding: 0.5em;
 }
 
-h3.card-title {
-    font-size: 1.5em;
+.card-title {
+    font-size: 2.2em;
 }
 
-h5.card-title {
-    font-size: 1.5em;
+.card-subtitle {
+    font-size: 1.8em;
 }   
 
 p.card-text {
     padding-bottom: 0.8em;
     line-height: 1.2em;
+    font-size: 1.25em;
 }
 
 /***************************** Media Queries ***********************************************/
