--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -56,7 +56,7 @@
         </div>
     </div>
     
-    <div class="container mb-5">
+    <div class="container">
         <div class="card-deck">
         <div class="card" style="color: #555;">
             <div class="card-body">
@@ -87,7 +87,7 @@
             </div>
         </div>
             </div>
-        
+          
          <div class="card-deck mt-5">
         <div class="card" style="color: #555;">
             <div class="card-body">
