get rid of faulty extension

--- a/src/app/aboutus/aboutus.component.css
+++ b/src/app/aboutus/aboutus.component.css
@@ -21,7 +21,9 @@ html, body {
 
 /************* navigation ********************/
 
-
+#document {
+    display: none;
+}
 
 .nav-link {
     font-size: 2em;
